--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -18,6 +18,10 @@ p.banner {
     margin-top: 32px;
 }
 
+h3 {
+    margin-bottom: 5px;
+}
+
 .row {
     display: flex;
     flex-direction: row;
@@ -49,7 +53,7 @@ tr {
 
 }
 
-tbody td:first-child, th:first-child {
+td:first-child, th:first-child {
     padding-left: 0 !important;
 }
 
